# AI_ProjectArchitect

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .mcp.json  AI Project Architect.docx  BUILD_INDEX_FROM_BC.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PROGRESS.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_analysis.py
agents/: document_assembler.md  document_assembler.md.tbi.json  ideation_coach.md  ideation_coach.md.tbi.json  project_architect.md  project_architect.md.tbi.json  quality_gatekeeper.md  quality_gatekeeper.md.tbi.json  social_media_uiux_designer.md  social_media_uiux_designer.md.tbi.json
app/: chat_engine.py  dependencies.py  main.py
config/: autopickup_allowlist.json  lexicon.json  library_approvers.json  library_tenant_domains.json  library_trusted_sources.json  model_prices.json  pilot_recipients.json  report_recipients.json  settings.py  skill_registry.json  skill_registry.json.tbi.json  tbi_runtime_agents.json  tbi_stack_scores.json
deploy/: Dockerfile  docker-compose.yml
directives/: 01-idea-intake.md  03-feature-discovery.md  03b-acceptance-criteria.md  04-outline-generation.md  05-outline-approval.md  06-chapter-build.md  07-quality-gates.md  08-final-assembly.md  ai-project-architect-onboarding.md  approval-task-dependency-linking.md  basecamp-token-health.md  colaberry-attachment-fetch.md  colaberry-read-ticket.md  comms-ram-all-hands.md  lead-ingestion.md  manual-workflow.md  my-day-action-recipes.md  my-day-bc-sync.md  pilot-weekly-cadence.md  productivity-report.md  (+1 more)
(+781 files in other folders)
